--- a/samples/Support4Demos/res/layout/fragment_tabs.xml
+++ b/samples/Support4Demos/res/layout/fragment_tabs.xml
@@ -18,6 +18,7 @@
 */
 -->
 
+<!-- BEGIN_INCLUDE(complete) -->
 <TabHost
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
@@ -50,3 +51,4 @@
 
     </LinearLayout>
 </TabHost>
+<!-- END_INCLUDE(complete) -->
