--- a/v4/java/android/support/v4/view/package.html
+++ b/v4/java/android/support/v4/view/package.html
@@ -1,5 +1,11 @@
 <body>
 
-Support classes to access some of the android.view package features introduced after API level 4 in a backwards compatible fashion.
+Support android.util classes to assist with development of applications for
+android API level 4 or later.  The main features here are a variety of classes
+for handling backwards compatibility with views (for example
+{@link android.support.v4.view.MotionEventCompat} allows retrieving multi-touch
+data if available), and a new
+{@link android.support.v4.view.ViewPager} widget (which at some point should be moved over
+to the widget package).
 
 </body>
