--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -117,6 +117,11 @@
     <!-- The preferred padding along the right edge of list items. -->
     <attr name="listPreferredItemPaddingRight" format="dimension" />
 
+    <!-- ListPopupWindow comaptibility -->
+    <attr name="dropDownListViewStyle" format="reference" />
+    <attr name="listPopupWindowStyle" format="reference" />
+
+
     <!-- The preferred TextAppearance for the primary text of list items. -->
     <attr name="textAppearanceListItem" format="reference" />
     <!-- The preferred TextAppearance for the primary text of small list items. -->
