--- a/appcompat/res/values/styles.xml
+++ b/appcompat/res/values/styles.xml
@@ -57,6 +57,16 @@
         <!-- TODO(trevorjohns): Missing styles here, including padding. Note that padding was commented out in ActionBarOverlayLayout -->
     </style>
 
+    <!-- TODO(anirudhd): The item below doesn't work. -->
+    <!--<style name="Widget.AppCompat.ListPopupWindow">-->
+        <!--<item name="android:dropDownSelector">@android:drawable/list_selector_background</item>-->
+        <!--<item name="android:popupBackground">@android:drawable/spinner_dropdown_background</item>-->
+        <!--<item name="android:dropDownWidth">wrap_content</item>-->
+    <!--</style>-->
+
+    <!--<style name="Widget.AppCompat.PopupMenu" parent="Widget.AppCompat.ListPopupWindow">-->
+    <!--</style>-->
+
     <style name="Widget.AppCompat.ActionButton" parent="Widget.AppCompat.Base.ActionButton">
     </style>
 
