--- a/appcompat/res/values/themes.xml
+++ b/appcompat/res/values/themes.xml
@@ -48,8 +48,13 @@
 
         <!-- List attributes -->
         <item name="dropdownListPreferredItemHeight">64dip</item>
+        <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
+
         <!-- TODO(trevorjohns): The item below doesn't work. -->
         <!-- <item name="popupMenuStyle">@android:style/Widget.PopupMenu</item> -->
+        <!-- <item name="listPopupWindowStyle">@android:style/ListPopupWindow</item>-->
+
+
     </style>
 
     <!-- Base platform-dependent theme providing an action bar in a light-themed activity. -->
