ActionBar: Fix build errors in ActionBarView and ActionBarActivity
Removed (or made conditional) some method calls that didn't exist
in Eclair.

Ported over missing drawables needed for Widget.ActionBar.TabView.

Created new layout "action_bar_view_list_nav_layout" to allow
instantiating a styled LinearLayout, since LinearLayout's ctor
doesn't take a defStyle parameter until API 11.

Adjusted Android.mk to target API 9 for the Eclair port, since
there's a few minor features we use from Gingerbread (if present).
Also make sure R.java is preserved when loading platform agnostic
components.

Change-Id: Icc40325f826600f6d96df03da079695933fc5303

--- a/appcompat/res/values/attrs.xml
+++ b/appcompat/res/values/attrs.xml
@@ -219,6 +219,13 @@
         <attr name="height"/>
     </declare-styleable>
 
+    <declare-styleable name="View">
+        <!-- Sets the padding, in pixels, of the start edge; see {@link android.R.attr#padding}. -->
+        <attr name="paddingStart" format="dimension" />
+        <!-- Sets the padding, in pixels, of the end edge; see {@link android.R.attr#padding}. -->
+        <attr name="paddingEnd" format="dimension" />
+    </declare-styleable>
+
     <!-- =================== -->
     <!-- Action mode styles  -->
     <!-- =================== -->
