--- a/appcompat/res/values/themes.xml
+++ b/appcompat/res/values/themes.xml
@@ -30,13 +30,13 @@
 
         <item name="buttonBarStyle">@android:style/ButtonBar</item>
         <item name="buttonBarButtonStyle">@android:style/Widget.Button</item>
-        <item name="selectableItemBackground">?android:attr/listSelector</item>
+        <item name="selectableItemBackground">@drawable/item_background</item>
 
         <item name="dividerVertical">@drawable/appcompat_divider_dark</item>
         <item name="dividerHorizontal">@drawable/appcompat_divider_dark</item>
         <item name="actionBarDivider">?attr/dividerVertical</item>
 
-        <item name="listPreferredItemHeight">64dp</item>
+        <item name="listPreferredItemHeight">?android:attr/listPreferredItemHeight</item>
         <item name="listPreferredItemHeightSmall">48dp</item>
         <item name="listPreferredItemHeightLarge">80dp</item>
 
@@ -64,7 +64,7 @@
 
         <item name="buttonBarStyle">@android:style/ButtonBar</item>
         <item name="buttonBarButtonStyle">@android:style/Widget.Button</item>
-        <item name="selectableItemBackground">?android:attr/listSelector</item>
+        <item name="selectableItemBackground">@drawable/item_background</item>
 
         <item name="dividerVertical">@drawable/appcompat_divider_light</item>
         <item name="dividerHorizontal">@drawable/appcompat_divider_light</item>
@@ -79,6 +79,10 @@
 
         <item name="textAppearanceListItem">?android:attr/textAppearanceMedium</item>
         <item name="textAppearanceListItemSmall">?android:attr/textAppearanceMedium</item>
+
+        <!-- List attributes -->
+        <item name="dropdownListPreferredItemHeight">64dip</item>
+        <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
     </style>
 
     <!-- Base platform-dependent theme providing a dark action bar in a light-themed activity. -->
@@ -118,7 +122,6 @@
     <!-- Platform-independent theme providing an action bar in a dark-themed activity. -->
     <style name="Theme.AppCompat" parent="Theme.Base.AppCompat">
         <item name="windowActionBar">true</item>
-
         <item name="actionBarTabStyle">@style/Widget.AppCompat.ActionBar.TabView</item>
         <item name="actionBarTabBarStyle">@style/Widget.AppCompat.ActionBar.TabBar</item>
         <item name="actionBarTabTextStyle">@style/Widget.AppCompat.ActionBar.TabText</item>
@@ -137,18 +140,33 @@
     <!-- Platform-independent theme providing an action bar in a dark-themed activity. -->
     <style name="Theme.AppCompat.Light" parent="Theme.Base.AppCompat.Light">
         <item name="windowActionBar">true</item>
+        <item name="actionBarTabStyle">@style/Widget.AppCompat.ActionBar.TabView</item>
+        <item name="actionBarTabBarStyle">@style/Widget.AppCompat.ActionBar.TabBar</item>
+        <item name="actionBarTabTextStyle">@style/Widget.AppCompat.ActionBar.TabText</item>
+        <item name="actionOverflowButtonStyle">@style/Widget.AppCompat.ActionButton.Overflow</item>
+        <item name="actionBarStyle">@style/Widget.AppCompat.ActionBar</item>
+        <item name="actionBarWidgetTheme">@null</item>
+        <item name="actionBarSize">@dimen/action_bar_size</item>
+        <item name="actionBarDivider">?attr/dividerHorizontal</item>
+        <item name="actionBarItemBackground">?attr/selectableItemBackground</item>
+        <item name="actionMenuTextAppearance">@style/TextAppearance.AppCompat.Widget.ActionBar.Menu</item>
+        <item name="actionMenuTextColor">?android:attr/textColorPrimary</item>
+        <!-- TODO(trevorjohns): Does not exist on API < 11. -->
+        <!-- <item name="actionDropDownStyle">@android:style/Widget_Spinner_DropDown</item> -->
     </style>
 
     <!-- Platform-independent theme providing an action bar in a dark-themed activity. -->
     <style name="Theme.AppCompat.Light.DarkActionBar"
            parent="Theme.Base.AppCompat.Light.DarkActionBar">
         <item name="windowActionBar">true</item>
+        <!-- TODO(trevorjohns): Implement other values for theme. -->
     </style>
 
     <!-- Platform-independent theme providing an action bar in a dark-themed activity.
          This theme will follow the device's default styling if available. -->
     <style name="Theme.AppCompat.DeviceDefault" parent="Theme.Base.AppCompat.DeviceDefault">
         <item name="windowActionBar">true</item>
+        <!-- TODO(trevorjohns): Implement other values for theme. -->
     </style>
 
     <!-- Platform-independent theme providing an action bar in a light-themed activity.
@@ -156,6 +174,7 @@
     <style name="Theme.AppCompat.DeviceDefault.Light"
            parent="Theme.Base.AppCompat.DeviceDefault.Light">
         <item name="windowActionBar">true</item>
+        <!-- TODO(trevorjohns): Implement other values for theme. -->
     </style>
 
     <!-- Platform-independent theme providing a dark action bar in a light-themed activity.
