appcompat: Add drawables for home button
Added drawables (mdpi/hdpi/xhdpi) for Action Bar home button.

Did not include RTL versions, since RTL isn't properly supported
until ICS.

Also added styles for light/dark version.

Change-Id: Ib6350cb426f2cf22807be7b23d47425ffd9ddd1c

--- a/appcompat/res/values/themes.xml
+++ b/appcompat/res/values/themes.xml
@@ -46,6 +46,9 @@
         <item name="textAppearanceListItem">?android:attr/textAppearanceMedium</item>
         <item name="textAppearanceListItemSmall">?android:attr/textAppearanceMedium</item>
 
+        <!-- Button attributes -->
+        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_dark</item>
+
         <!-- List attributes -->
         <item name="dropdownListPreferredItemHeight">64dip</item>
         <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
@@ -83,6 +86,9 @@
         <!-- List attributes -->
         <item name="dropdownListPreferredItemHeight">64dip</item>
         <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
+
+        <!-- Button attributes -->
+        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_light</item>
     </style>
 
     <!-- Base platform-dependent theme providing a dark action bar in a light-themed activity. -->
