appcompat: Fix default theme for ICS & HC
Also simplify the Android.mk to compile everything w/ ICS. We do
this because the resources need to be compiled against ICS, and
there is no good way to separate out the resources per API target
level.

Change-Id: I266b407191cd532cfa91ab5f6b5288dcae8c819a

--- a/appcompat/res/values-v11/themes.xml
+++ b/appcompat/res/values-v11/themes.xml
@@ -27,7 +27,7 @@
     <eat-comment />
 
     <!-- Base platform-dependent theme providing an action bar in a dark-themed activity. -->
-    <style name="Theme.Base.AppCompat" parent="@android:style/Theme">
+    <style name="Theme.Base.AppCompat" parent="@android:style/Theme.Holo">
 
         <item name="buttonBarStyle">?attr/buttonBarStyle</item>
         <item name="buttonBarButtonStyle">?attr/buttonBarButtonStyle</item>
@@ -56,7 +56,7 @@
     </style>
 
     <!-- Base platform-dependent theme providing an action bar in a light-themed activity. -->
-    <style name="Theme.Base.AppCompat.Light" parent="@android:style/Theme.Light">
+    <style name="Theme.Base.AppCompat.Light" parent="@android:style/Theme.Holo.Light">
         <item name="buttonBarStyle">?attr/buttonBarStyle</item>
         <item name="buttonBarButtonStyle">?attr/buttonBarButtonStyle</item>
         <item name="selectableItemBackground">?attr/selectableItemBackground</item>
