AppCompat: Add additional resources needed for ActionBar
Added additional Holo resources required for default ActionBar
theme.

Also renamed content area from @id/content to
@id/action_bar_activity_content, since @id/content may be in use
elsewhere in third-party apps.

Change-Id: I8cdb5cd6c0fc8f3499eebc50d94353a4eae2c1f1

--- a/appcompat/res/layout/action_bar_decor.xml
+++ b/appcompat/res/layout/action_bar_decor.xml
@@ -35,7 +35,7 @@
                 android:visibility="gone"
                 style="?attr/actionModeStyle" />
     </android.support.appcompat.widget.ActionBarContainer>
-    <FrameLayout android:id="@+id/content"
+    <FrameLayout android:id="@id/action_bar_activity_content"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  android:layout_weight="1"
