--- a/appcompat/res/layout/action_bar_decor_overlay.xml
+++ b/appcompat/res/layout/action_bar_decor_overlay.xml
@@ -19,7 +19,7 @@
         android:id="@+id/action_bar_overlay_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-    <FrameLayout android:id="@+id/content"
+    <FrameLayout android:id="@id/action_bar_activity_content"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent" />
     <LinearLayout android:id="@+id/top_action_bar"
