--- a/appcompat/res/layout/screen.xml
+++ b/appcompat/res/layout/screen.xml
@@ -96,7 +96,7 @@ This is the basic layout for a screen, with all of its features enabled.
     </RelativeLayout>
 
     <!-- Content -->
-    <FrameLayout android:id="@+id/content"
+    <FrameLayout android:id="@id/action_bar_activity_content"
                  android:layout_width="fill_parent"
                  android:layout_height="0dip"
                  android:layout_weight="1"
