--- a/appcompat/res/values/styles.xml
+++ b/appcompat/res/values/styles.xml
@@ -50,32 +50,52 @@
          any attributes here in a derived style, you should declare each
          item twice - both with and without the "android:" namespace prefix. -->
     <style name="Widget.AppCompat.ActionBar" parent="Widget.AppCompat.Base.ActionBar">
-        <item name="android:height">?attr/actionBarSize</item>
-        <item name="android:background">@null</item>
-        <item name="android:divider">?attr/dividerVertical</item>
+        <item name="background">@drawable/action_bar_background</item>
+        <item name="displayOptions">useLogo|showHome|showTitle</item>
+        <item name="divider">@drawable/action_bar_divider</item>
+        <item name="height">?attr/actionBarSize</item>
+        <item name="titleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Title</item>
+        <item name="subtitleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Subtitle</item>
+        <item name="progressBarStyle">@style/Widget.AppCompat.ProgressBar.Horizontal</item>
+        <item name="indeterminateProgressStyle">@style/Widget.AppCompat.ProgressBar.Small</item>
         <item name="homeLayout">@layout/action_bar_home</item>
-        <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_dark</item>
-        <!-- TODO(trevorjohns): Missing styles here, including padding. Note that padding was commented out in ActionBarOverlayLayout -->
     </style>
 
     <style name="Widget.AppCompat.Light.ActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="titleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Title</item>
-        <item name="subtitleTextStyle">@style/TextAppearance.Widget.ActionBar.Subtitle</item>
-        <item name="android:background">@drawable/ab_transparent_light_holo</item>
+        <item name="subtitleTextStyle">@style/TextAppearance.Widget.AppCompat.ActionBar.Subtitle</item>
+        <item name="background">@drawable/ab_transparent_light_holo</item>
         <item name="backgroundStacked">@drawable/ab_stacked_transparent_light_holo</item>
         <item name="backgroundSplit">@drawable/ab_bottom_transparent_light_holo</item>
         <item name="homeAsUpIndicator">@drawable/ic_ab_back_holo_light</item>
-        <!-- TODO(trevorjohns): Needs port of Holo theme -->
-        <!--<item name="android:progressBarStyle">@style/Widget.Holo.Light.ProgressBar.Horizontal</item>-->
-        <!--<item name="android:indeterminateProgressStyle">@style/Widget.Holo.Light.ProgressBar</item>-->
+        <!-- TODO(trevorjohns): Action Bar styles below are from Holo. Port over rest of Holo? -->
+        <!--<item name="progressBarStyle">@style/Widget.AppCompat.Light.ProgressBar.Horizontal</item>-->
+        <!--<item name="indeterminateProgressStyle">@style/Widget.AppCompat.Light.ProgressBar</item>-->
     </style>
 
     <style name="TextAppearance.Widget.AppCompat.ActionBar.Title"
            parent="@android:style/TextAppearance.Medium">
     </style>
-    <style name="TextAppearance.Widget.ActionBar.Subtitle"
+    <style name="TextAppearance.Widget.AppCompat.ActionBar.Subtitle"
            parent="@android:style/TextAppearance.Small">
     </style>
+
+    <style name="Widget.AppCompat.ProgressBar.Horizontal" parent="android:Widget.ProgressBar">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@android:drawable/progress_horizontal</item>
+        <item name="android:indeterminateDrawable">@android:drawable/progress_indeterminate_horizontal</item>
+        <item name="android:minHeight">20dip</item>
+        <item name="android:maxHeight">20dip</item>
+    </style>
+
+    <style name="Widget.AppCompat.ProgressBar.Small" parent="android:Widget.ProgressBar">
+        <item name="android:indeterminateDrawable">@drawable/progress_small_white</item>
+        <item name="android:minWidth">16dip</item>
+        <item name="android:maxWidth">16dip</item>
+        <item name="android:minHeight">16dip</item>
+        <item name="android:maxHeight">16dip</item>
+    </style>
+
 
     <!-- TODO(anirudhd): The item below doesn't work. -->
     <!--<style name="Widget.AppCompat.ListPopupWindow">-->
