--- a/appcompat/res/layout/action_menu_item_layout.xml
+++ b/appcompat/res/layout/action_menu_item_layout.xml
@@ -14,16 +14,17 @@
      limitations under the License.
 -->
 
-<com.android.internal.view.menu.ActionMenuItemView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="wrap_content"
-                                                   android:layout_height="wrap_content"
-                                                   android:layout_gravity="center"
-                                                   android:gravity="center"
-                                                   android:focusable="true"
-                                                   android:paddingTop="4dip"
-                                                   android:paddingBottom="4dip"
-                                                   android:paddingLeft="8dip"
-                                                   android:paddingRight="8dip"
-                                                   android:textAppearance="?attr/actionMenuTextAppearance"
-                                                   android:textColor="?attr/actionMenuTextColor"
-                                                   style="?attr/actionButtonStyle" />
+<com.android.internal.view.menu.ActionMenuItemView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:focusable="true"
+        android:paddingTop="4dip"
+        android:paddingBottom="4dip"
+        android:paddingLeft="8dip"
+        android:paddingRight="8dip"
+        android:textAppearance="?attr/actionMenuTextAppearance"
+        android:textColor="?attr/actionMenuTextColor"
+        style="?attr/actionButtonStyle"/>
