--- a/appcompat/res/layout/popup_menu_item_layout.xml
+++ b/appcompat/res/layout/popup_menu_item_layout.xml
@@ -15,11 +15,12 @@
 -->
 
 <!-- TODO(trevorjohns): This will need to be renamed once ListMenuItemView is copied over. -->
-<com.android.internal.view.menu.ListMenuItemView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:layout_width="fill_parent"
-                                                 android:layout_height="?attr/dropdownListPreferredItemHeight"
-                                                 android:minWidth="196dip"
-                                                 android:paddingRight="16dip">
+<com.android.internal.view.menu.ListMenuItemView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="?attr/dropdownListPreferredItemHeight"
+        android:minWidth="196dip"
+        android:paddingRight="16dip">
 
     <!-- Icon will be inserted here. -->
 
@@ -42,7 +43,7 @@
                 android:singleLine="true"
                 android:duplicateParentState="true"
                 android:ellipsize="marquee"
-                android:fadingEdge="horizontal" />
+                android:fadingEdge="horizontal"/>
 
         <TextView
                 android:id="@+id/shortcut"
@@ -52,7 +53,7 @@
                 android:layout_alignParentLeft="true"
                 android:textAppearance="?attr/textAppearanceSmallPopupMenu"
                 android:singleLine="true"
-                android:duplicateParentState="true" />
+                android:duplicateParentState="true"/>
 
     </RelativeLayout>
 
