--- a/appcompat/res/values/themes.xml
+++ b/appcompat/res/values/themes.xml
@@ -53,6 +53,9 @@
         <item name="dropdownListPreferredItemHeight">64dip</item>
         <item name="dropDownListViewStyle">@android:style/Widget.ListView.DropDown</item>
 
+        <!-- Panel attributes -->
+        <item name="panelMenuListWidth">296dip</item>
+
         <!-- TODO(trevorjohns): The item below doesn't work. -->
         <!-- <item name="popupMenuStyle">@android:style/Widget.PopupMenu</item> -->
         <!-- <item name="listPopupWindowStyle">@android:style/ListPopupWindow</item>-->
