appcompat: Fix ActionItem rendering
Minor bug fixes to make sure ActionItems can render properly.

- Fix method signatures in ActionBarImplCompat.
- Make sure menu gets inflated in ActionBarActivity and pass
  Menu object to ActionBar.
- Fix class names in menu layout files.

Change-Id: I4f2a2ea68dda2a14a18c5d3b0d55e1dc815a44ad

--- a/appcompat/res/layout/action_mode_bar.xml
+++ b/appcompat/res/layout/action_mode_bar.xml
@@ -16,7 +16,7 @@
 ** limitations under the License.
 */
 -->
-<com.android.internal.widget.ActionBarContextView
+<android.support.appcompat.widget.ActionBarContextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
