--- a/appcompat/res/layout/action_menu_item_layout.xml
+++ b/appcompat/res/layout/action_menu_item_layout.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<com.android.internal.view.menu.ActionMenuItemView
+<android.support.appcompat.view.menu.ActionMenuItemView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
