--- a/appcompat/res/values/dimens.xml
+++ b/appcompat/res/values/dimens.xml
@@ -42,5 +42,7 @@
     <dimen name="action_bar_subtitle_top_margin">-3dp</dimen>
     <!-- Bottom margin for action bar subtitles -->
     <dimen name="action_bar_subtitle_bottom_margin">5dip</dimen>
+    <!-- Minimum width for an action button in the menu area of an action bar -->
+    <dimen name="action_button_min_width">56dip</dimen>
 
 </resources>
