--- a/appcompat/res/layout/action_bar_tab.xml
+++ b/appcompat/res/layout/action_bar_tab.xml
@@ -14,5 +14,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<view class="android.support.appcompat.widget.ScrollingTabContainerView$TabView"
+<view xmlns:android="http://schemas.android.com/apk/res/android"
+      class="android.support.appcompat.widget.ScrollingTabContainerView$TabView"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
       style="?attr/actionBarTabStyle"/>
